added debug info